# QCodeEditor

./: .gitmodules  CMakeLists.txt
cmake/: QCodeEditorConfig.cmake.in
example/: CMakeLists.txt
include/internal/: QSyntaxStyle.hpp
resources/: qcodeeditor_resources.qrc
src/internal/: QSyntaxStyle.cpp
